--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,15 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <button id="click-me">Click-ME</button>
+    <button id="click-me">Show img</button>
+
     Number page : <input type="number" value="" id="page-number">
     Number img : <input type="number" value="" id="img-number">
-    <div id="result"></div>
 
+    <button id="get-tasks">Show Tasks</button>
+
+    <div id="result"></div>
+   <div id="tasks-result"> </div>
 
 <!--    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>-->
     <script src="service"></script>
