--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <button id="get-tasks">Show Tasks</button>
 
     <div id="result"></div>
-   <div id="tasks-result"> </div>
+   <ul id="tasks-result">   </ul>
 
 <!--    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>-->
     <script src="service"></script>
